--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 # Node
 /node_modules
 npm-debug.log
+yarn-debug.log
 yarn-error.log
 
 # IDEs and editors
@@ -19,6 +20,8 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
+.vs/
+.vscode/
 
 # Visual Studio Code
 .vscode/*
